--- a/aspect-oriented-programming/pom.xml
+++ b/aspect-oriented-programming/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>log-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
