--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
 		<module>log-client</module>
         <module>wsdl-to-pojo</module>
         <module>aspect-oriented-programming</module>
-    </modules>
+		<module>jtpm-mock</module>
+	</modules>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
