--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>jtpm-mock</module>
 		<module>keypair-validator</module>
         <module>otel-cleint-1</module>
+		<module>otel-cleint-2</module>
     </modules>
 	<properties>
 		<java.version>21</java.version>
