add snap api demo

--- a/otel-cleint-1/src/main/resources/application.properties
+++ b/otel-cleint-1/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.application.name=otel1
-otel.propagators=tracecontext
-otel.resource.attributes.deployment.environment=dev
-otel.resource.attributes.service.name=otel1
-otel.resource.attributes.service.namespace=otel-sample
-otel.resource.attributes.service.instance.id=localhost:8080
+spring.application.name=otel-client-1
