--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>dependency-injection</module>
 		<module>snap</module>
 		<module>snap-payment</module>
+		<module>snap-merchant</module>
 	</modules>
 	<properties>
 		<java.version>21</java.version>
