--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,9 @@
 		<module>snap</module>
 		<module>snap-payment</module>
 		<module>snap-merchant</module>
-	</modules>
+        <module>auto-config-lib</module>
+        <module>auto-config-app</module>
+    </modules>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
