--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>snap-merchant</module>
         <module>auto-config-lib</module>
         <module>auto-config-app</module>
+        <module>transactional-app</module>
     </modules>
 	<properties>
 		<java.version>21</java.version>
